--- a/features/employee/history-page/style.module.scss
+++ b/features/employee/history-page/style.module.scss
@@ -6,6 +6,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-bottom: 3rem;
 
         .profile-card {
             margin-top: 1.8rem;
@@ -14,7 +15,254 @@
             height: 13.1rem;
             box-shadow: 0px 3px 6px #00000029;
             border-radius: 2rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 1.2rem;
 
+            .profile {
+                display: flex;
+                gap: 2rem;
+
+                .profile-img {
+                    background-color: #E9EAEF;
+                    width: 5rem;
+                    height: 5rem;
+                    border-radius: 50%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    position: relative;
+
+                    .status {
+                        position: absolute;
+                        color: #13A82C;
+                        border-radius: 50%;
+                        bottom: 0;
+                        right: 0;
+                        width: 8.6rem;
+                        height: 1.6rem;
+                        z-index: 0;
+                    }
+                }
+
+                .name-list {
+                    .name {
+                        color: #262753;
+                        font-size: 1.6rem;
+                    }
+
+                    .employee {
+                        display: flex;
+                    }
+
+                    .employee p:nth-child(1) {
+                        color: #9394A7;
+                    }
+
+                    .employee p:nth-child(2) {
+                        color: #262753;
+                    }
+                }
+            }
+            .company-name {
+                background-color: #27AAD0;
+                color: #FFFFFF;
+                width: 33.1rem;
+                height: 3.4rem;
+                border-radius: 0.6rem;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        }
+    }
+    .text {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 18rem;
+        color: #262753;
+        margin-bottom: 2rem;
+        font-size: 1.3rem;
+    }
+    .main-cards {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 1.5rem;
+        margin-bottom: 1.6rem;
+
+        .history-cards {
+            background-color: #FFFFFF;
+            border-radius: 0.5rem;
+            width: 22rem;
+            height: 12.1rem;
+            display: flex;
+            // justify-content: center;
+            align-items: center;
+            flex-direction: column;
+
+            .names {
+                background-color: #F0F0F0;
+                width: 20.7rem;
+                margin-top: 0.6rem;
+                height: 3.6rem;
+                border-radius: 0.5rem;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 1.1rem;
+                margin-bottom: 1rem;
+
+                .person-icon {
+                    color: #9394A9;
+                }
+
+                .person-name {
+                    color: #262753;
+                    font-size: 1.2rem;
+                }
+
+                .person-card {
+                    background-color: #EFD80A;
+                    border-radius: 0.4rem;
+                    width: 3.7rem;
+                    height: 2.4rem;
+                    color: #FFFFFF;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+                .person-card1 {
+                    background-color: #1ED424;
+                    border-radius: 0.4rem;
+                    width: 3.7rem;
+                    height: 2.4rem;
+                    color: #FFFFFF;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+                .person-card2 {
+                    background-color: #9394A9;
+                    border-radius: 0.4rem;
+                    width: 3.7rem;
+                    height: 2.4rem;
+                    color: #FFFFFF;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+            }
+
+            .location {
+                display: flex;
+                align-items: center;
+                justify-content: flex-start;
+                gap: 3.4rem;
+                margin-bottom: 1rem;
+                .location-icon {
+                    color: #9394A9;
+                }
+                .adress {
+                    font-size: 0.8rem;
+                    color: #262753;
+                }
+            }
+
+            .history {
+                display: flex;
+                gap: 3.3rem;
+                .history-icon {
+                    color: #9394A9;
+                }
+                .start-history {
+                    font-size: 1rem;
+                }
+
+                .start-history p:nth-child(1) {
+                    color: #9394A9;
+                }
+
+                .start-history p:nth-child(2) {
+                    color: #262753;
+                }
+
+                .end-history {
+                    font-size: 1rem;
+                }
+
+                .end-history p:nth-child(1) {
+                    color: #9394A9;
+                }
+
+                .end-history p:nth-child(2) {
+                    color: #262753;
+                }
+            }
+
+        }
+
+        .status-cards {
+            background-color: #FFFFFF;
+            border-radius: 0.5rem;
+            width: 12rem;
+            height: 12.1rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            gap: 3rem;
+
+            .card {
+                background-color: #27AAD0;
+                width: 5.4rem;
+                height: 5.3rem;
+                border-radius: 1.5rem;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                .card-text {
+                    color: #FFFFFF;
+                    font-size: 1.8rem;
+                }
+
+            }
+
+            .status {
+                background-color: #F0F0F0;
+                border-radius: 0.3rem;
+                width: 6.3rem;
+                height: 1.5rem;
+                display: flex;
+                justify-content: center;
+                h3 {
+                    color: #262753;
+                    font-size: 1rem;
+                }
+            }
+
+        }
+    }
+
+    .footer {
+        color: #9394A7;
+        width: 100%;
+        height: 8.3rem;
+        background-color: #FFFFFF;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10rem;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+
+        p {
+            font-size: 1.2rem;
         }
     }
 
