--- a/features/employee/history-page/style.module.scss
+++ b/features/employee/history-page/style.module.scss
@@ -37,13 +37,12 @@
 
                     .status {
                         position: absolute;
-                        color: #13A82C;
+                        background-color: #13A82C;
                         border-radius: 50%;
                         bottom: 0;
                         right: 0;
-                        width: 8.6rem;
-                        height: 1.6rem;
-                        z-index: 0;
+                        width: 1.5rem;
+                        height: 1.5rem;
                     }
                 }
 
