--- a/features/employee/history-page/style.module.scss
+++ b/features/employee/history-page/style.module.scss
@@ -50,6 +50,7 @@
                     .name {
                         color: #262753;
                         font-size: 1.6rem;
+                       
                     }
 
                     .employee {
@@ -122,6 +123,7 @@
                 .person-name {
                     color: #262753;
                     font-size: 1.2rem;
+                    white-space: nowrap;
                 }
 
                 .person-card {
