--- a/features/employee/home-page/style.module.scss
+++ b/features/employee/home-page/style.module.scss
@@ -1,7 +1,8 @@
 .main {
     background-color: var(--main-bg);
-    min-height: 250vh;
+    min-height: 100vh;
     overflow-y: scroll;
+    padding-bottom: 10rem;
 
     .card-list {
         display: flex;
@@ -643,6 +644,8 @@
                 align-items: center;
                 justify-content: center;
                 flex-direction: column;
+                border-radius: 5rem;
+                margin-bottom: 2rem;
             }
 
             .desc p:nth-child(1) {
@@ -675,8 +678,3 @@
     }
 }
 
-.desc-module {
-    border-radius: 5rem;
-    margin-top: 2rem;
-
-}
