--- a/features/employee/sign-up/style.module.scss
+++ b/features/employee/sign-up/style.module.scss
@@ -8,15 +8,12 @@
   .name-card {
     background-color: #f0f0f0;
     border-radius: 3rem;
-    opacity: 1;
     width: 8.4rem;
     height: 8.3rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 1rem;
+    margin: 0 auto 1rem;
 
     .short-name {
       color: #707070;
@@ -26,18 +23,16 @@
   .company-name {
     color: #262753;
     font-size: 1.3rem;
-    display: flex;
-    justify-content: center;
+    text-align: center;
     margin-bottom: 7.7rem;
   }
 
-  .name {
+  .name, .phone {
     margin-bottom: 3rem;
 
     .field {
       display: flex;
       flex-direction: column;
-      justify-content: center;
 
       label {
         opacity: 0.5;
@@ -52,12 +47,10 @@
           padding: 1rem;
         }
 
-        .person-icon {
+        .person-icon, .phone-icon {
           color: #2474ff;
-
           position: absolute;
-          right: 0;
-          margin-right: 1rem;
+          right: 1rem;
         }
       }
     }
@@ -65,53 +58,24 @@
 
   .phone {
     margin-bottom: 2rem;
-    .field {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-
-      label {
-        opacity: 0.5;
-      }
-
-      .col-field {
-        position: relative;
-        display: flex;
-        align-items: center;
-
-        input {
-          padding: 1rem;
-        }
-
-        .phone-icon {
-          color: #2474ff;
-
-          position: absolute;
-          right: 0;
-          margin-right: 1rem;
-        }
-      }
-    }
   }
 
   .work-as {
     color: #707070;
     font-size: medium;
-    margin: 1.5rem ;
+    margin: 1.5rem;
   }
 
   .cards {
     display: flex;
-    align-items: center;
-    justify-content: start;
-    gap: 8rem;
+    flex-wrap: wrap;
+    gap: 0rem 4rem;
     margin-bottom: 2rem;
 
     .card {
-      justify-content: center;
-      align-items: center;
       display: flex;
-      gap: 1.3rem;
+      align-items: center;
+      gap: 1.5rem;
       margin-bottom: 3.6rem;
 
       .card-head {
@@ -120,10 +84,6 @@
         height: 5.9rem;
         display: flex;
         border-radius: 1rem;
-
-        //Hilalim bak active demiştim ya mavi olsun diye onu burada yapıyoruz
-        // bu classı ekleyince html elementten  mavi olacak
-        // clsx diye bir paket ile iki classı birden ekliyoruz.
 
         &.active {
           background-color: #2474ff;
@@ -135,21 +95,13 @@
 
         h1 {
           color: #262753;
-          justify-content: center;
-          display: flex;
-          align-items: center;
           margin: auto;
         }
       }
 
-      .card-title {
-        h3 {
-          color: #262753;
-          display: flex;
-          align-items: center;
-          margin: auto;
-          text-align: center;
-        }
+      .card-title h3 {
+        color: #262753;
+        text-align: center;
       }
     }
   }
